--- a/web_app/Pipfile
+++ b/web_app/Pipfile
@@ -4,10 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+pymongo = "*"
+flask = "*"
 pylint = "*"
 black = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3"
