--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,10 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-black = "*"
+pymongo = "*"
+flask = "*"
 pylint = "*"
-pytest = "*"
+black = "*"
 
 [dev-packages]
 
