updated subdir names in lint.yml since wrong?

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         # repeat same job for each subsystem in the following subdirectories
-        subdir: [web-app, machine-learning-client]
+        subdir: [web_app, machine_learning_client]
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
