--- a/.github/workflows/machine_learning_client.yml
+++ b/.github/workflows/machine_learning_client.yml
@@ -6,7 +6,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: ["3.7", "3.8"]
+        python-version: ["3.7", "3.8", "3.9", "3.10"]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python ${{ matrix.python-version }}
