--- a/.github/workflows/web_app.yml
+++ b/.github/workflows/web_app.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Set up docker network and mongodb container
+        run: |
+        docker network create project4
       - name: Install dependencies
         run: |
           cd web_app
