added env option to app.py, updated readme, added env to webapp cicd

--- a/.github/workflows/web_app.yml
+++ b/.github/workflows/web_app.yml
@@ -1,5 +1,7 @@
 name: web_app CI / CD
 on: [pull_request]
+env:
+  MONGO_URI: "mongodb://localhost:27017/"
 jobs:
   build:
     runs-on: ubuntu-latest
