--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -1,7 +1,7 @@
 # docs: https://hub.docker.com/_/python
 FROM python:3
 
-WORKDIR /web-app
+WORKDIR /web_app
 
 COPY requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
