added command to fix ml dockerfile

--- a/machine_learning_client/Dockerfile
+++ b/machine_learning_client/Dockerfile
@@ -1,5 +1,5 @@
 # docs: https://hub.docker.com/_/python
-FROM python:3
+FROM python:3.10
 
 WORKDIR /machine_learning_client
 
@@ -9,3 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 
 CMD [ "python", "app.py" ]
+
+RUN apt-get update && apt-get install ffmpeg libsm6 libxext6  -y
