finalize tests for ml

--- a/machine_learning_client/requirements.txt
+++ b/machine_learning_client/requirements.txt
@@ -2,7 +2,7 @@ Flask
 pymongo
 pylint
 black
-mediapipe
+mediapipe == 0.10.9 # see Pipfile to see why this version
 opencv-python
 requests
 coverage
